--- a/hw3/Assignment3_12131094.ipynb
+++ b/hw3/Assignment3_12131094.ipynb
@@ -11,8 +11,8 @@
    "source": [
     "## Advanced Control for Robotics - Homework 3\n",
     "\n",
-    "####<p align=\"right\"> 涂志鑫 12131094 </p>\n",
-    "####<p align=\"right\"> 2022.03 </p>"
+    "<p align=\"right\"> 涂志鑫 12131094 </p>\n",
+    "<p align=\"right\"> 2022.03 </p>"
    ]
   },
   {
@@ -68,6 +68,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Problem 4\n",
+    "\n",
+    "#### Solution\n",
+    "(a)\n",
+    "<div align=center>\n",
+    "<img src=prom4.jpg width = 40% />\n",
+    "</div>\n",
+    "\n",
+    "Assume the center of the circle plate is O, $^O\\nu_b = [0,0,1,0,0,0]^T$\n",
+    "$^b\\pmb{v_b} =\\pmb{v_o}+\\pmb{w}\\times \\pmb{^bOb} =[0,1,0]^T\\times [0,0,-20]^T+ [0,0,1]^T\\times [10,0,0]^T $.\n",
+    "\n",
+    " $$^b\\nu_b = [0,0,1,-20,10,0]^T$$\n",
+    "\n",
+    "(b) The initial transformation matrix of b in {s}, \n",
+    "            $$M = \\left[\\begin{matrix}  1&0&0&10 \\\\  0&1&0&0 \\\\0&0&1&-20 \\\\0&0&0&1 \\end{matrix}\\right]$$\n",
+    "$^s \\bar{s_1} = [0,1,0,0,0,0]^T$, $^s\\bar{s_2} = [0,0,1,0,0,0]^T$\n",
+    "\n",
+    "$$\\begin{aligned} \n",
+    "^sT_b &= e^{[^s\\bar{s_1}]\\theta} e^{[^s\\bar{s_2}]\\theta} M \\\\\n",
+    "    &=e^{ \\left[\\begin{matrix}  0&0&t&0 \\\\  0&0&0&0 \\\\-t&0&0&0 \\\\0&0&0&0 \\end{matrix}\\right]}e^{\\left[\\begin{matrix}   0&-t&0&0 \\\\  t&0&0&0 \\\\0&0&0&0 \\\\0&0&0&0 \\end{matrix}\\right]}\\left[\\begin{matrix}  1&0&0&10 \\\\  0&1&0&0 \\\\0&0&1&-20 \\\\0&0&0&1 \\end{matrix}\\right]\\\\\n",
+    "    &= \\left(\\begin{array}{cccc} \\cos\\left(t\\right) & 0 & \\sin\\left(t\\right) & 10\\,\\cos\\left(t\\right)-20\\,\\sin\\left(t\\right)\\\\ 0 & 1 & 0 & 0\\\\ -\\sin\\left(t\\right) & 0 & \\cos\\left(t\\right) & -20\\,\\cos\\left(t\\right)-10\\,\\sin\\left(t\\right)\\\\ 0 & 0 & 0 & 1 \\end{array}\\right)\n",
+    "\\end{aligned} $$\n",
+    "\n",
+    "$$p(t) = \\left(\\begin{array}{c} 10\\,\\cos\\left(t\\right)-20\\,\\sin\\left(t\\right)\\\\ 0\\\\ -20\\,\\cos\\left(t\\right)-10\\,\\sin\\left(t\\right) \\end{array}\\right)$$\n",
+    "\n",
+    "The linear velocity  $\\dot p(t) = \\left(\\begin{array}{c} -20\\,\\cos\\left(t\\right)-10\\,\\sin\\left(t\\right)\\\\ 0\\\\ -10\\,\\cos\\left(t\\right)+20\\,\\sin\\left(t\\right) \\end{array}\\right)$\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -99,39 +132,6 @@
     "thetalist = np.array([np.pi / 2.0, 3, np.pi])\n",
     "T = mr.FKinSpace(M,Slist,thetalist)\n",
     "print('The end-effector configuration is:\\n',T)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "#### Problem 4\n",
-    "\n",
-    "#### Solution\n",
-    "(a)\n",
-    "<div align=center>\n",
-    "<img src=prom4.jpg width = 40% />\n",
-    "</div>\n",
-    "\n",
-    "Assume the center of the circle plate is O, $^O\\nu_b = [0,0,1,0,0,0]^T$\n",
-    "$^b\\pmb{v_b} =\\pmb{v_o}+\\pmb{w}\\times \\pmb{^bOb} =[0,1,0]^T\\times [0,0,-20]^T+ [0,0,1]^T\\times [10,0,0]^T $.\n",
-    "\n",
-    " $$^b\\nu_b = [0,0,1,-20,10,0]^T$$\n",
-    "\n",
-    "(b) The initial transformation matrix of b in {s}, \n",
-    "            $$M = \\left[\\begin{matrix}  1&0&0&10 \\\\  0&1&0&0 \\\\0&0&1&-20 \\\\0&0&0&1 \\end{matrix}\\right]$$\n",
-    "$^s \\bar{s_1} = [0,1,0,0,0,0]^T$, $^s\\bar{s_2} = [0,0,1,0,0,0]^T$\n",
-    "\n",
-    "$$\\begin{aligned} \n",
-    "^sT_b &= e^{[^s\\bar{s_1}]\\theta} e^{[^s\\bar{s_2}]\\theta} M \\\\\n",
-    "    &=e^{ \\left[\\begin{matrix}  0&0&t&0 \\\\  0&0&0&0 \\\\-t&0&0&0 \\\\0&0&0&0 \\end{matrix}\\right]}e^{\\left[\\begin{matrix}   0&-t&0&0 \\\\  t&0&0&0 \\\\0&0&0&0 \\\\0&0&0&0 \\end{matrix}\\right]}\\left[\\begin{matrix}  1&0&0&10 \\\\  0&1&0&0 \\\\0&0&1&-20 \\\\0&0&0&1 \\end{matrix}\\right]\\\\\n",
-    "    &= \\left(\\begin{array}{cccc} \\cos\\left(t\\right) & 0 & \\sin\\left(t\\right) & 10\\,\\cos\\left(t\\right)-20\\,\\sin\\left(t\\right)\\\\ 0 & 1 & 0 & 0\\\\ -\\sin\\left(t\\right) & 0 & \\cos\\left(t\\right) & -20\\,\\cos\\left(t\\right)-10\\,\\sin\\left(t\\right)\\\\ 0 & 0 & 0 & 1 \\end{array}\\right)\n",
-    "\\end{aligned} $$\n",
-    "\n",
-    "$$p(t) = \\left(\\begin{array}{c} 10\\,\\cos\\left(t\\right)-20\\,\\sin\\left(t\\right)\\\\ 0\\\\ -20\\,\\cos\\left(t\\right)-10\\,\\sin\\left(t\\right) \\end{array}\\right)$$\n",
-    "\n",
-    "The linear velocity  $\\dot p(t) = \\left(\\begin{array}{c} -20\\,\\cos\\left(t\\right)-10\\,\\sin\\left(t\\right)\\\\ 0\\\\ -10\\,\\cos\\left(t\\right)+20\\,\\sin\\left(t\\right) \\end{array}\\right)$\n"
    ]
   },
   {
@@ -665,8 +665,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(d) 1.\n",
-    "derive the analyitcal jacobian $J_a$\n",
+    "(d) \n",
+    "1. derive the analyitcal jacobian $J_a$.\n",
+    "Choose the reference frame{0}, \n",
+    "\n",
+    "$$\\begin{aligned} ^o\\dot{p_b} &= J_a\\dot{\\theta}\\\\\n",
+    "            &= \\pmb{^0v} +\\pmb{^ow}\\times \\pmb{op_b}\\\\\n",
+    "            &= [-\\pmb{op_b}]\\pmb{^ow} + \\pmb{^0v}\\\\ \n",
+    "            & = \\left[\\begin{matrix}  [-\\pmb{op_b}]&I_{3*3}\\end{matrix}\\right] ^o\\nu_b\n",
+    "            & = \\left[\\begin{matrix}  [-\\pmb{op_b}]&I_{3*3}\\end{matrix}\\right] ^oJ(\\theta)\\dot {\\theta}\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "Therefore, the analytical jacobian is \n",
+    "$$ \n",
+    "J_a = \\left[\\begin{matrix}  [-\\pmb{op_b}]&I_{3*3}\\end{matrix}\\right] ^oJ(\\theta)\n",
+    "$$\n",
+    "\n",
+    "denote that $^oJ(\\theta)$ is the geometric jacobian.\n",
+    "\n",
+    "2. Compare the calculation result of function 'myAnalyticalJacobian' and the built-in function of the drake, the two results are the same as shown in the code output below.\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
