--- a/hw4/Assignment4_12131094.ipynb
+++ b/hw4/Assignment4_12131094.ipynb
@@ -91,16 +91,25 @@
     "\n",
     "#### Solution\n",
     "(a)\n",
-    "Choose the initial configuration is $\\theta_1 = 0.5rad, \\theta_2 = 0.5rad$.\n",
-    "\n",
-    "(b) \n",
-    "\n",
-    "\n"
+    "Choose the initial configuration is $\\theta_1 = 0.5rad, \\theta_2 = 0.5rad$, and start simulating for 4 sec.\n",
+    "<div align=center>\n",
+    "<img src=pro4-1.png width = 50% />\n",
+    "</div>\n",
+    "<div align=center>\n",
+    "<img src=pro4-2.png width = 50% />\n",
+    "</div>\n",
+    "<div align=center>\n",
+    "<img src=pro4-3.png width = 50% />\n",
+    "</div> \n",
+    "The plot of joint trajectories for the simulation is as shown below.\n",
+    "<div align=center>\n",
+    "<img src=plottraj.png width = 50% />\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +175,7 @@
        "Text(0, 0.5, 'joint angle(rad)')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -323,16 +332,125 @@
     "plt.xlabel('time(ms)')\n",
     "plt.ylabel('joint angle(rad)')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(b) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#problem 4(b)   (RNEA ALGORITHM)\n",
+    "import numpy as np\n",
+    "import modern_robotics as mr\n",
+    "\n",
+    "\n",
+    "def ID(q,dq,ddq,Fext,N,Si,M):   #RNEA ALGORITHM\n",
+    "    Si_0 = np.zeros((6,N)) \n",
+    "    Si_0[:,0] = np.matmul(mr.Adjoint(M[4:8,:]),Si[:,0])\n",
+    "    Si_0[:,1] = np.matmul(mr.Adjoint(M[8:12,:]),Si[:,0])\n",
+    "    g = 9.81\n",
+    "    A_i[0] = -g\n",
+    "    nu_i = np.zeros((6,N+1))\n",
+    "    A_i = np.zeros((6,N+1))\n",
+    "    wrench_i = np.zeros((6,N+1))\n",
+    "    # Forward pass\n",
+    "    for i in range(1,N+1):\n",
+    "        if i==1:\n",
+    "            T_ito0 = mr.FKinSpace( M[4*i:4*i+4,:], Si_0[:,0:i], q[0:i] )\n",
+    "            T_pito0 = M[0:4,:]\n",
+    "        else:\n",
+    "            T_ito0 = mr.FKinSpace( M[4*i:4*i+4,:], Si_0[:,0:i], q[0:i] )\n",
+    "            T_pito0 = mr.FKinSpace( M[4*(i-1):4*(i-1)+4,:], Si_0[:,0:i-1], q[0:i-1] )\n",
+    "        T_pitoi = np.matmul(mr.TransInv(T_ito0),T_pito0)\n",
+    "        X_ptoi = mr.Adjoint(T_pitoi)\n",
+    "        nu_i = X_ptoi.dot(nu_i[i-1]) + Si[:,i-1]*dq[i-1]         #S_i and dq_i index are i-1\n",
+    "        A_i[i] = X_ptoi.dot(A_i[i-1]) + Si[:,i-1]*ddq[i-1] + np.matmul(mr.adV(nu_i),Si[:,i-1])*dq[i-1] \n",
+    "        #wrench_i = \n",
+    "        \n",
+    "        \n",
+    "# Some parameters\n",
+    "L0 = 0.5\n",
+    "L1 = 0.7\n",
+    "L2 = 0.4\n",
+    "\n",
+    "h = 0.06\n",
+    "w = 0.08\n",
+    "r = 0.05\n",
+    "\n",
+    "m = 1\n",
+    "N = 2\n",
+    "\n",
+    "Si = np.zeros((6,N))        #si in body frame\n",
+    "Si_0 = np.zeros((6,N))      #si in fixed frame\n",
+    "Si = np.array([[0, 0,  1,  0, 0, 0],\n",
+    "                    [0, 0,  1,  0, 0, 0]]).T\n",
+    "\n",
+    "M = np.zeros(((N+1)*4,4))   #transformation matrix of all frames\n",
+    "M[0:4,:] = np.array([[1, 0,  0, 0],\n",
+    "                      [ 0, 1,  0, 0],\n",
+    "                      [ 0, 0, 1, 0],\n",
+    "                      [ 0, 0,  0, 1]])\n",
+    "\n",
+    "M[4:8,:] = np.array([[1, 0,  0, 0],\n",
+    "                      [ 0, 1,  0, 0],\n",
+    "                      [ 0, 0, 1, L0],\n",
+    "                      [ 0, 0,  0, 1]])\n",
+    "\n",
+    "M[8:12,:] = np.array([[1, 0,  0, 0],\n",
+    "                      [ 0, 1,  0, 0],\n",
+    "                      [ 0, 0, 1, L1],\n",
+    "                      [ 0, 0,  0, 1]])\n",
+    "# Si_0[:,0] = np.matmul(mr.Adjoint(M[4:8,:]),Si[:,0])\n",
+    "# Si_0[:,1] = np.matmul(mr.Adjoint(M[8:12,:]),Si[:,0])\n",
+    "#T = mr.FKinSpace(M,Si_0,thetalist)\n",
+    "Ic = np.zeros((N*6,6))\n",
+    "#Ic[0] = \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(c) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#problem 4(c)   (Forward dynamics function)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   "hash": "2c0a1b54a8cc2a0a18a9409041ce5a9ffe0ead629fa424e5f34cfe42fb3c98b9"
   },
   "kernelspec": {
    "display_name": "PyCharm (Advanced-control-for-robotics)",
    "language": "python",
-   "name": "pycharm-28c6c563"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -344,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
