--- a/hw4/Assignment4_12131094.ipynb
+++ b/hw4/Assignment4_12131094.ipynb
@@ -337,12 +337,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) "
+    "(b) The inverse dynamics RNEA function $\\tau_i= ID(q,\\dot{q},\\ddot{q},F_{ext},N,S_i,M,I_c,L)$ is as shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,15 +351,17 @@
     "import modern_robotics as mr\n",
     "\n",
     "\n",
-    "def ID(q,dq,ddq,Fext,N,Si,M):   #RNEA ALGORITHM\n",
+    "def ID(q,dq,ddq,Fext,N,Si,M,Ic,L):   #RNEA ALGORITHM\n",
     "    Si_0 = np.zeros((6,N)) \n",
     "    Si_0[:,0] = np.matmul(mr.Adjoint(M[4:8,:]),Si[:,0])\n",
     "    Si_0[:,1] = np.matmul(mr.Adjoint(M[8:12,:]),Si[:,0])\n",
+    "    tau_i = np.zeros((N))\n",
     "    g = 9.81\n",
-    "    A_i[0] = -g\n",
-    "    nu_i = np.zeros((6,N+1))\n",
-    "    A_i = np.zeros((6,N+1))\n",
-    "    wrench_i = np.zeros((6,N+1))\n",
+    "    nu_i = np.zeros((6,N+1))  #including the base link\n",
+    "    A_i = np.zeros((6,N+1))   #including the base link\n",
+    "    wrench_i = np.zeros((6,N+1))   #including the base link\n",
+    "    A_gtoc = -g\n",
+    "    \n",
     "    # Forward pass\n",
     "    for i in range(1,N+1):\n",
     "        if i==1:\n",
@@ -370,16 +372,40 @@
     "            T_pito0 = mr.FKinSpace( M[4*(i-1):4*(i-1)+4,:], Si_0[:,0:i-1], q[0:i-1] )\n",
     "        T_pitoi = np.matmul(mr.TransInv(T_ito0),T_pito0)\n",
     "        X_ptoi = mr.Adjoint(T_pitoi)\n",
-    "        nu_i = X_ptoi.dot(nu_i[i-1]) + Si[:,i-1]*dq[i-1]         #S_i and dq_i index are i-1\n",
-    "        A_i[i] = X_ptoi.dot(A_i[i-1]) + Si[:,i-1]*ddq[i-1] + np.matmul(mr.adV(nu_i),Si[:,i-1])*dq[i-1] \n",
-    "        #wrench_i = \n",
+    "        nu_i[i] = X_ptoi.dot(nu_i[i-1]) + Si[:,i-1]*dq[i-1]         #S_i and dq_i index are i-1\n",
+    "        A_i[i] = X_ptoi.dot(A_i[i-1]) + Si[:,i-1]*ddq[i-1] + np.matmul(mr.ad(nu_i),Si[:,i-1])*dq[i-1] \n",
+    "        T_itoc = np.array([[1, 0,  0, 0],\n",
+    "                      [ 0, 1,  0, 0],\n",
+    "                      [ 0, 0, 1, -L[i-1]/2],\n",
+    "                      [ 0, 0,  0, 1]])\n",
+    "        X_itoc = mr.Adjoint(T_itoc)\n",
+    "        X_ctoi = mr.Adjoint(mr.TransInv(T_itoc))\n",
+    "        X_ctoi_star = mr.Adjoint(T_itoc).T\n",
+    "        Ii = np.matmul( np.matmul(X_ctoi_star,Ic[(i-1)*6:i*6,:]),X_itoc )\n",
+    "        wrench_i[i] = np.matmul(Ii,A_i[i]) + np.matmul(-mr.ad(nu_i[i]).T,Ii).dot(nu_i[i]) \\\n",
+    "                                                    - np.matmul(Ii,X_ctoi).dot(A_gtoc) \n",
+    "    \n",
+    "    # Backward pass\n",
+    "    for i in range(N,0,-1):\n",
+    "        tau_i[i-1] = np.matmul(Si[i-1].T,wrench_i[i])\n",
+    "        if i==1:\n",
+    "            T_ito0 = mr.FKinSpace( M[4*i:4*i+4,:], Si_0[:,0:i], q[0:i] )\n",
+    "            T_pito0 = M[0:4,:]\n",
+    "        else:\n",
+    "            T_ito0 = mr.FKinSpace( M[4*i:4*i+4,:], Si_0[:,0:i], q[0:i] )\n",
+    "            T_pito0 = mr.FKinSpace( M[4*(i-1):4*(i-1)+4,:], Si_0[:,0:i-1], q[0:i-1] )\n",
+    "        T_pitoi = np.matmul(mr.TransInv(T_ito0),T_pito0) \n",
+    "        X_itopi_star = mr.Adjoint(T_pitoi).T\n",
+    "        wrench_i[i-1] = wrench_i[i-1] + np.matmul(X_itopi_star,wrench_i[i])    \n",
+    "    \n",
+    "    return tau_i\n",
     "        \n",
     "        \n",
     "# Some parameters\n",
     "L0 = 0.5\n",
     "L1 = 0.7\n",
     "L2 = 0.4\n",
-    "\n",
+    "L = np.array([0.7,0.4])\n",
     "h = 0.06\n",
     "w = 0.08\n",
     "r = 0.05\n",
@@ -392,7 +418,7 @@
     "Si = np.array([[0, 0,  1,  0, 0, 0],\n",
     "                    [0, 0,  1,  0, 0, 0]]).T\n",
     "\n",
-    "M = np.zeros(((N+1)*4,4))   #transformation matrix of all frames\n",
+    "M = np.zeros(((N+1)*4,4))    #transformation matrix of all frames\n",
     "M[0:4,:] = np.array([[1, 0,  0, 0],\n",
     "                      [ 0, 1,  0, 0],\n",
     "                      [ 0, 0, 1, 0],\n",
@@ -411,7 +437,8 @@
     "# Si_0[:,1] = np.matmul(mr.Adjoint(M[8:12,:]),Si[:,0])\n",
     "#T = mr.FKinSpace(M,Si_0,thetalist)\n",
     "Ic = np.zeros((N*6,6))\n",
-    "#Ic[0] = \n"
+    "Ic[0:6,:] = np.diag([m*(w**2+L1**2)/12, m*(h**2+L1**2)/12, m*(h**2+w**2)/12,m,m,m])\n",
+    "Ic[6:12,:] = np.diag([m*(w**2+L1**2)/12, m*(h**2+L1**2)/12, m*(h**2+w**2)/12,m,m,m])\n"
    ]
   },
   {
@@ -423,24 +450,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#problem 4(c)   (Forward dynamics function)\n"
+    "#problem 4(c)   (Forward dynamics function)\n",
+    "import numpy as np\n",
+    "import modern_robotics as mr\n",
+    "\n",
+    "def FD(tau_i,q,dq,Fext):\n",
+    "    return ddq"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(d)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#problem 4(d)"
+   ]
   }
  ],
  "metadata": {
@@ -462,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.2"
   },
   "orig_nbformat": 4
  },
