--- a/hw4/Assignment4_12131094.ipynb
+++ b/hw4/Assignment4_12131094.ipynb
@@ -337,12 +337,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) The inverse dynamics RNEA function $\\tau_i= ID(q,\\dot{q},\\ddot{q},F_{ext},N,S_i,M,I_c,L)$ is as shown below."
+    "(b) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,16 +351,16 @@
     "import modern_robotics as mr\n",
     "\n",
     "\n",
-    "def ID(q,dq,ddq,Fext,N,Si,M,Ic,L):   #RNEA ALGORITHM\n",
+    "def ID(q,dq,ddq,Fext,g,N,Si,M,Ic,L):   #RNEA ALGORITHM\n",
     "    Si_0 = np.zeros((6,N)) \n",
     "    Si_0[:,0] = np.matmul(mr.Adjoint(M[4:8,:]),Si[:,0])\n",
-    "    Si_0[:,1] = np.matmul(mr.Adjoint(M[8:12,:]),Si[:,0])\n",
+    "    Si_0[:,1] = np.matmul(mr.Adjoint(M[8:12,:]),Si[:,1])\n",
     "    tau_i = np.zeros((N))\n",
-    "    g = 9.81\n",
+    "    # g = 9.81\n",
     "    nu_i = np.zeros((6,N+1))  #including the base link\n",
     "    A_i = np.zeros((6,N+1))   #including the base link\n",
     "    wrench_i = np.zeros((6,N+1))   #including the base link\n",
-    "    A_gtoc = -g\n",
+    "    A_gto0 = np.array([0,0,0,0,0,-g])\n",
     "    \n",
     "    # Forward pass\n",
     "    for i in range(1,N+1):\n",
@@ -372,8 +372,8 @@
     "            T_pito0 = mr.FKinSpace( M[4*(i-1):4*(i-1)+4,:], Si_0[:,0:i-1], q[0:i-1] )\n",
     "        T_pitoi = np.matmul(mr.TransInv(T_ito0),T_pito0)\n",
     "        X_ptoi = mr.Adjoint(T_pitoi)\n",
-    "        nu_i[i] = X_ptoi.dot(nu_i[i-1]) + Si[:,i-1]*dq[i-1]         #S_i and dq_i index are i-1\n",
-    "        A_i[i] = X_ptoi.dot(A_i[i-1]) + Si[:,i-1]*ddq[i-1] + np.matmul(mr.ad(nu_i),Si[:,i-1])*dq[i-1] \n",
+    "        nu_i[:,i] = X_ptoi @ nu_i[:,i-1] + Si[:,i-1]*dq[i-1]         #S_i and dq_i index are i-1\n",
+    "        A_i[:,i] = X_ptoi @ A_i[:,i-1] + Si[:,i-1]*ddq[i-1] + np.matmul(mr.ad(nu_i[:,i]),Si[:,i-1]) * dq[i-1] \n",
     "        T_itoc = np.array([[1, 0,  0, 0],\n",
     "                      [ 0, 1,  0, 0],\n",
     "                      [ 0, 0, 1, -L[i-1]/2],\n",
@@ -382,12 +382,23 @@
     "        X_ctoi = mr.Adjoint(mr.TransInv(T_itoc))\n",
     "        X_ctoi_star = mr.Adjoint(T_itoc).T\n",
     "        Ii = np.matmul( np.matmul(X_ctoi_star,Ic[(i-1)*6:i*6,:]),X_itoc )\n",
-    "        wrench_i[i] = np.matmul(Ii,A_i[i]) + np.matmul(-mr.ad(nu_i[i]).T,Ii).dot(nu_i[i]) \\\n",
-    "                                                    - np.matmul(Ii,X_ctoi).dot(A_gtoc) \n",
-    "    \n",
+    "        T_0toi = mr.TransInv(mr.FKinSpace( M[4*i:4*i+4,:], Si_0[:,0:i], q[0:i] ))\n",
+    "        X_0toi = mr.Adjoint(T_0toi)\n",
+    "        # print(np.matmul(Ii,A_i[:,i]))\n",
+    "        # print(np.matmul(-mr.ad(nu_i[:,i]).T,Ii)@ nu_i[:,i])\n",
+    "        # print(-np.matmul(np.matmul(Ii,X_0toi),A_gto0))\n",
+    "        # print(Fext[:,i-1])\n",
+    "        # print(np.matmul(Ii,A_i[:,i]) + np.matmul(-mr.ad(nu_i[:,i]).T,Ii)@ nu_i[:,i] \\\n",
+    "        #                     - np.matmul(np.matmul(Ii,X_0toi),A_gto0) - Fext[:,i-1])\n",
+    "        wrench_i[:,i] = np.matmul(Ii,A_i[:,i]) + np.matmul(-mr.ad(nu_i[:,i]).T,Ii)@ nu_i[:,i] \\\n",
+    "                            - np.matmul(np.matmul(Ii,X_0toi),A_gto0) - Fext[:,i-1]\n",
+    "    # print(nu_i)  \n",
+    "    # print(A_i) \n",
+    "    # print(wrench_i)\n",
+    "        \n",
     "    # Backward pass\n",
     "    for i in range(N,0,-1):\n",
-    "        tau_i[i-1] = np.matmul(Si[i-1].T,wrench_i[i])\n",
+    "        tau_i[i-1] = np.matmul(Si[:,i-1].T,wrench_i[:,i])\n",
     "        if i==1:\n",
     "            T_ito0 = mr.FKinSpace( M[4*i:4*i+4,:], Si_0[:,0:i], q[0:i] )\n",
     "            T_pito0 = M[0:4,:]\n",
@@ -396,12 +407,65 @@
     "            T_pito0 = mr.FKinSpace( M[4*(i-1):4*(i-1)+4,:], Si_0[:,0:i-1], q[0:i-1] )\n",
     "        T_pitoi = np.matmul(mr.TransInv(T_ito0),T_pito0) \n",
     "        X_itopi_star = mr.Adjoint(T_pitoi).T\n",
-    "        wrench_i[i-1] = wrench_i[i-1] + np.matmul(X_itopi_star,wrench_i[i])    \n",
+    "        wrench_i[:,i-1] = wrench_i[:,i-1] + np.matmul(X_itopi_star,wrench_i[:,i])    \n",
     "    \n",
-    "    return tau_i\n",
-    "        \n",
-    "        \n",
-    "# Some parameters\n",
+    "    return tau_i\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(c) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'history' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_2161929/752036738.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#problem 4(c)   (Forward dynamics function)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mhistory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'history' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#problem 4(c)   (Forward dynamics function)\n",
+    "history"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.2213356  7.18503035]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#problem 4(d)  Using ID function to simulate\n",
+    "\n",
+    "import numpy as np\n",
+    "import modern_robotics as mr\n",
+    "import matplotlib.pyplot as plt\n",
+    "# Some parameters of the double pendulum\n",
     "L0 = 0.5\n",
     "L1 = 0.7\n",
     "L2 = 0.4\n",
@@ -415,8 +479,8 @@
     "\n",
     "Si = np.zeros((6,N))        #si in body frame\n",
     "Si_0 = np.zeros((6,N))      #si in fixed frame\n",
-    "Si = np.array([[0, 0,  1,  0, 0, 0],\n",
-    "                    [0, 0,  1,  0, 0, 0]]).T\n",
+    "Si = np.array([[1, 0,  0,  0, 0, 0],\n",
+    "                    [1, 0,  0,  0, 0, 0]]).T\n",
     "\n",
     "M = np.zeros(((N+1)*4,4))    #transformation matrix of all frames\n",
     "M[0:4,:] = np.array([[1, 0,  0, 0],\n",
@@ -431,62 +495,36 @@
     "\n",
     "M[8:12,:] = np.array([[1, 0,  0, 0],\n",
     "                      [ 0, 1,  0, 0],\n",
-    "                      [ 0, 0, 1, L1],\n",
+    "                      [ 0, 0, 1, L1+L0],\n",
     "                      [ 0, 0,  0, 1]])\n",
     "# Si_0[:,0] = np.matmul(mr.Adjoint(M[4:8,:]),Si[:,0])\n",
     "# Si_0[:,1] = np.matmul(mr.Adjoint(M[8:12,:]),Si[:,0])\n",
     "#T = mr.FKinSpace(M,Si_0,thetalist)\n",
     "Ic = np.zeros((N*6,6))\n",
     "Ic[0:6,:] = np.diag([m*(w**2+L1**2)/12, m*(h**2+L1**2)/12, m*(h**2+w**2)/12,m,m,m])\n",
-    "Ic[6:12,:] = np.diag([m*(w**2+L1**2)/12, m*(h**2+L1**2)/12, m*(h**2+w**2)/12,m,m,m])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(c) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#problem 4(c)   (Forward dynamics function)\n",
-    "import numpy as np\n",
-    "import modern_robotics as mr\n",
+    "Ic[6:12,:] = np.diag([m*(w**2+L1**2)/12, m*(h**2+L1**2)/12, m*(h**2+w**2)/12,m,m,m])\n",
     "\n",
-    "def FD(tau_i,q,dq,Fext):\n",
-    "    return ddq"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#problem 4(d)"
+    "stept = 0.001\n",
+    "# for the initial condition [0.5,0.5], simulating for 4 sec\n",
+    "q = np.array([0.5,0.5])\n",
+    "dq = np.array([0,0])\n",
+    "ddq = np.array([0,0])\n",
+    "tau = np.array([0,0])\n",
+    "Fext = np.zeros((6,N))\n",
+    "# for t in np.arange(0,4,stept):\n",
+    "dda = FD(tau,q,dq,Fext,N,Si,M,Ic,L)\n",
+    "print(dda)"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "2c0a1b54a8cc2a0a18a9409041ce5a9ffe0ead629fa424e5f34cfe42fb3c98b9"
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   },
   "kernelspec": {
    "display_name": "PyCharm (Advanced-control-for-robotics)",
    "language": "python",
-   "name": "python3"
+   "name": "pycharm-28c6c563"
   },
   "language_info": {
    "codemirror_mode": {
