--- a/hw4/Assignment4_12131094.ipynb
+++ b/hw4/Assignment4_12131094.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,24 +421,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 252,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'history' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2161929/752036738.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#problem 4(c)   (Forward dynamics function)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mhistory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'history' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#problem 4(c)   (Forward dynamics function)\n",
-    "history"
+    "import numpy as np\n",
+    "import modern_robotics as mr\n",
+    "\n",
+    "def FD(tau_i,q,dq,Fext,N,Si,M,Ic,L):\n",
+    "    #step 1 solve the c～\n",
+    "    ddq_zero = np.zeros(N)\n",
+    "    c_tuta = ID(q,dq,ddq_zero,Fext,g,N,Si,M,Ic,L)\n",
+    "    # step2 calculate M_theta\n",
+    "    dq_zero = np.zeros(N)\n",
+    "    Fext_zero = np.zeros((6,N))\n",
+    "    M_theta = np.zeros((N,N))\n",
+    "    for i in range(N):\n",
+    "        ddq_j0 = np.zeros((N,1))\n",
+    "        ddq_j0[i,:] = 1\n",
+    "        M_theta[:,i] = ID(q,dq_zero,ddq_j0,Fext_zero,0,N,Si,M,Ic,L)\n",
+    "    # step3 solve the forward dynamics\n",
+    "    ddq = np.matmul(np.linalg.inv(M_theta),(tau_i - c_tuta))\n",
+    "    return ddq"
    ]
   },
   {
@@ -448,13 +453,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[5.2213356  7.18503035]\n",
       "[5.2213356  7.18503035]\n"
      ]
     }
