--- a/hw4/Assignment4_12131094.ipynb
+++ b/hw4/Assignment4_12131094.ipynb
@@ -832,7 +832,7 @@
     }
    ],
    "source": [
-    "# Second initial Conditon\n",
+    "# Third initial Conditon\n",
     "\n",
     "# Build robot from code\n",
     "builder = DiagramBuilder()\n",
@@ -954,7 +954,7 @@
     "\n",
     "# own code simulation\n",
     "stept = 0.001\n",
-    "# for the initial condition [0.5,0.5], simulating for 4 sec\n",
+    "# for the initial condition [3*np.pi/4,3*np.pi/4], simulating for 4 sec\n",
     "q = np.array([3*np.pi/4,3*np.pi/4])\n",
     "dq = np.array([0,0])\n",
     "ddq = FD(tau,q,dq,Fext,N,Si,M,Ic,L)\n",
