--- a/hw5/hw5_12131094涂志鑫.md
+++ b/hw5/hw5_12131094涂志鑫.md
@@ -8,8 +8,18 @@ $\bf1.$  Given a linear system $x' = Ax $ and a quadratic function $V(x) = x^TPx
 ###### &emsp;Solution:
 &emsp;&emsp; As for the definition of globally exponentially stability, there exit posotive constants $\delta, \lambda, c$
 $$|x(t)|\leq C|x(0)|e^{-\lambda t}, \forall |x(0)|\leq \delta $$
+
+&emsp;&emsp; $∥x(t)∥^2 ≤ βc^t∥x(0)∥^2$, When 
+
 &emsp;&emsp; For linear system $\dot{x} = Ax$, its solution is $x(t) = e^{At}x(0)$.
 
+&emsp;&emsp; For $∥x(t)∥^2 ≤ βc^t∥x(0)∥^2$, when $c= e^{-2\lambda}, \beta = C^2$, the equation is satisfied, so it is equivilent to proove the exponential stability.
+
+&emsp;&emsp; For a linear system $x' = Ax $, $e^{At} = Te^{\lambda t}T^{-1}$, if the eigen value $\lambda$ satisfy the condition $Re(\lambda)<0$, $\mathop{lim}\limits_{t\rightarrow0} e^{At}x(0) = 0$ then the system is exponentially stable.
+
+&emsp;&emsp; Therefore, for linear system which is expoentially stable, that is equivilent to symptotically stable. 
+
+&emsp;&emsp; The condition of $P$ is $(1):P$ is  positive definite. $(2): \dot{V}(x) = \dot{x}^TPx+x^TP\dot{x} = x^T(A^TP+PA)x<0$, that is $A^TP+PA$ is negative definite.
 <br>
 
 $\bf2.$ Show that the system  ̇$x = f(x) = \begin{cases}  \dot{x_1} = −x_1 + x_1x_2 \\  \dot{x_2} = −x_2
@@ -45,9 +55,10 @@ $\bf3.$ Consider a discrete time system $x(k + 1) = Ax(k) + Bu(k)$, with linear 
 
 &emsp;&emsp; For system to be asymptotically stable, the conditions is $(1): V(x)$ is PD. (2) Rate of change of a function $V(x)$ along the system trajectory $\triangle_f V(x) <0$.
 
-
-&emsp;&emsp; That means for (1): $P$ is PD matrix. For (2): $$\begin{aligned}\triangle_f V(x)  &= V(x(K+1)) - V(x(k)) = V((A-BK)x) - V(x)\\
-&=   \end{aligned}$$
+&emsp;&emsp; That means for (1): $P$ is PD matrix. 
+&emsp;&emsp; For (2): $$\begin{aligned}\triangle_f V(x)  &= V(x(K+1)) - V(x(k)) = V((A-BK)x) - V(x)\\
+&= x^T\left[ (A-BK)P(A-BK)-P \right]x<0  \end{aligned}$$
+that is $\left[ (A-BK)P(A-BK)-P \right]$ is ND matrix.
 
 $\bf4.$ Show that the PSD cone is acute, i.e., $∀A,B ∈Sn^+$, we have $tr(AB) ≥0$. (Hint: decompose A using unitary matrix Q, i.e. $A = QΛQ^T$ , and then use the same $Q$ to define another matrix $C = QBQ^T$ . The trace $tr(AB)$ can be computed directly in terms of the entries in $C$ and $Λ$)
 
@@ -84,10 +95,10 @@ $$\mathop{min}\limits_{i}(\beta-\lambda ) = \beta -\mathop{min}\limits_{i} \lamb
 &emsp;&emsp; Therefore, $eig(\beta I-A) \geq 0$, $\beta I-A$ is PSD, that is  $A⪯βI$.
 
 
-$\bf6.$ Suppose $fi : R_n → R$, $i = 1,2$ are convex. Show that the pointwise maximum function $f(x) = max{f1(x),f2(x)}$ is also convex. 
+$\bf6.$ Suppose $fi : R_n → R$, $i = 1,2$ are convex. Show that the pointwise maximum function $f(x) = max{f_1(x),f_2(x)}$ is also convex. 
 
 ###### &emsp;Proof
-Pointwise maximum function $f(x) =  \mathop{max} {f1(x),f2(x)}$
+Pointwise maximum function $f(x) =  \mathop{max} {f_1(x),f_2(x)}$
 &emsp;&emsp; For convex function $f_i$, for $\alpha \in (0,1)$, pick any $x_1,x_2 \in D$, 
 (for some $i\in{1,2}$ )
 $$ \begin{aligned} f(\alpha x_1+(1-\alpha)x_2) 
@@ -95,4 +106,4 @@ $$ \begin{aligned} f(\alpha x_1+(1-\alpha)x_2)
 &< \alpha f_i(x_1) + (1-\alpha)f_i(x_2) \\ 
 & <\alpha f(x_1) +(1-\alpha) f(x_2) 
 \end{aligned}$$
-&emsp;&emsp; Therefore, pointwise maximum function  $f(x) =  \mathop{max} {f1(x),f2(x)}$ is convex function.  
+&emsp;&emsp; Therefore, pointwise maximum function  $f(x) =  \mathop{max} {f_1(x),f_2(x)}$ is convex function.  
