Slides and Solutions adding

--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -23,8 +23,7 @@
     "#### Problem 1 \n",
     "$\\textbf{Schur complement lemma}$: Find an equivalent semidefinite condition of the form $G(x) ⪰ 0$ for each of the following statements. Make sure the matrix G(x) you obtained is affine w.r.t. $x$, where $x$ is a vector or matrix variable of appropriate dimension. Please show your steps.\n",
     "(a) (Singular value bound): $σ(A(x)) < β$, where $A$ : $Rn → R^{q×m}$ is affine in x ∈ Rn and σ(·) denotes the singular value of a matrix.\n",
-    "(b) (Riccati inequality): $A^Tx+xA+xBR^{−1}B^{T}x+Q ≺ 0$, with $x ∈ Sn$ , $R ∈ Sp$ , $Q ∈ Sn$\n",
-    "and $A ∈ R^{n×n}$, and $B ∈ R^{n×p}$.\n",
+    "(b) (Riccati inequality): $A^Tx+xA+xBR^{−1}B^{T}x+Q ≺ 0$, with $x ∈ S_{++}^n$ , $R ∈ S_{++}^p$ , $Q ∈ S^n$ and $A ∈ R^{n×n}$, and $B ∈ R^{n×p}$.\n",
     "\n",
     "\n"
    ]
@@ -34,7 +33,35 @@
    "metadata": {},
    "source": [
     "#### Solution: \n",
-    "(a) \n"
+    "(a) \n",
+    "\n",
+    "\n",
+    "(b) (Riccati inequality)  $A^Tx+xA+xBR^{−1}B^{T}x+Q ≺ 0$\n",
+    "For  $x ∈ S_{++}^n$ , $R ∈ S_{++}^p$ , $Q ∈ S^n$, $A ∈ R^{n×n}$ and $B ∈ R^{n×p}$.\n",
+    "\n",
+    "The the inequality can be expressed \n",
+    "$$A^Tx+xA+xBR^{−1}B^{T}x+Q = 2xA+Q+xBR^{−1}B^{T}x≺ 0$$\n",
+    "$$-(2xA+Q)-xBR^{−1}B^{T}x > 0$$\n",
+    "For the Schur complement lemma, the inequality can change to \n",
+    "\n",
+    "$$ \n",
+    "    M = \\left[ \\begin{matrix}R & B^Tx\\\\ xB & -Q-2xA\\end{matrix} \\right] >0\n",
+    "    $$\n",
+    "\n",
+    "$x ∈ S_{++}^n$ can be expressed by \n",
+    "$$x = \\sum_i\\sum_{j \\leq i}x_{ij}S_{ij} , S_{ij}\\in S^n$$\n",
+    "\n",
+    "$$\\begin{aligned}\n",
+    "    M &=\\left[ \\begin{matrix}R & B^Tx\\\\ xB & -Q-2xA\\end{matrix} \\right] \\\\\n",
+    "    & = \\left[ \\begin{matrix}R & 0 \\\\ 0 & -Q\\end{matrix} \\right]+ \\sum_i\\sum_{j \\leq i}x_{ij} \\left[ \\begin{matrix}0 & B^TS_{ij}\\\\ S_{ij}B & -2S_{ij}A\\end{matrix} \\right] > 0  \\\\ \n",
+    "\\end{aligned} $$\n",
+    "\n",
+    "For $B ∈ R^{n×p}, S_{ij}\\in S^n$, then $B^TS_{ij} = S_{ij}B$, $\\left[\\begin{matrix}0 & B^TS_{ij}\\\\ S_{ij}B & -2S_{ij}A \\end{matrix}\\right] \\in S^{n+p}$ .\n",
+    "\n",
+    "Therefore, $ F_0=\\left[ \\begin{matrix}R & 0 \\\\ 0 & -Q\\end{matrix} \\right]$,$ F(x) = \\sum_i\\sum_{j \\leq i}x_{ij} \\left[ \\begin{matrix}0 & B^TS_{ij}\\\\ S_{ij}B & -2S_{ij}A\\end{matrix} \\right] $.\n",
+    "\n",
+    "$ G(x) = F_0+F(x) >0 $ is affine w.r.t. $x$.\n",
+    "\n"
    ]
   },
   {
@@ -87,7 +114,14 @@
     "\\end{array}\\right], \\alpha=0.7, \\beta=0.1$$\n",
     "\n",
     "#### Solution:\n",
-    "\n",
+    "(a) For the Lyapunov function $V(x) = x^TPx$, $\\dot{V}(x) = \\dot x^TPx+x^TP\\dot x \\leq -\\beta V(x)$.\n",
+    "The nonlinear system is $\\dot x = Ax+b\\phi (t,c^Tx)$, plug in the Lyapunov function, get\n",
+    "$$ \\dot V(x) =[Ax+b\\phi (t,c^Tx)]Px+x^TP[Ax+b\\phi (t,c^Tx)] \\leq -\\beta(x^TPx)$$\n",
+    "Because the fuction $\\phi(t,·)$ satisfies $|\\phi(t,y)| ≤ α|y|$, the inequality above can be\n",
+    "$$  \\begin{aligned}\n",
+    "[Ax+b\\phi (t,c^Tx)]Px+x^TP[Ax+b\\phi (t,c^Tx)]+\\beta(x^TPx) &\\leq 0\\\\ \n",
+    "[Ax+b\\phi (t,c^Tx)]Px+x^TP[Ax+b\\phi (t,c^Tx)]+\\beta(x^TPx) &\\leq 0 \n",
+    "\\end{aligned}$$\n",
     "\n"
    ]
   },
@@ -111,7 +145,7 @@
     "In this problem, you will use LMIs to find both $K$ and $P$, simultaneously.\n",
     "\n",
     "(a) Pose the problem of finding P and K as an LMI problem. \n",
-    "Hint: Starting from the inequality above, you will not get an LMI in the variables $P$ and $K$ (although you will have a set of matrix inequalities that are affine in $K$, for fixed $P$, and linear in $P$, for fixed $K$). Use the new variables $X = P−1$ and $Y = KP−1$. Be sure to explain why you can change variables.\n",
+    "Hint: Starting from the inequality above, you will not get an LMI in the variables $P$ and $K$ (although you will have a set of matrix inequalities that are affine in $K$, for fixed $P$, and linear in $P$, for fixed $K$). Use the new variables $X = P^{−1}$ and $Y = KP^{−1}$. Be sure to explain why you can change variables.\n",
     "\n",
     "(b) Carry out your method for the specific problem instance\n",
     "$$\n",
@@ -129,10 +163,15 @@
     "0 & 1 & 0\n",
     "\\end{array}\\right]\n",
     "$$\n",
-    "$B=(1,0,0)$, and $\\beta=1$. (Thus, we require a closed-loop decay at least as fast as $e^{-t / 2}$.)\n",
-    "\n",
+    "$B=(1,0,0)$, and $\\beta=1$. (Thus, we require a closed-loop decay at least as fast as $e^{-t / 2}$.)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Solution\n",
-    "(a)\n"
+    "(a) \n"
    ]
   },
   {
